Correct previous change to spacing of story section quote blocks

--- a/css/src/_home.scss
+++ b/css/src/_home.scss
@@ -10,7 +10,6 @@
 
 	.quote.card {
 		padding: $card-padding * 4 $card-padding;
-		margin-bottom: 0;
 
 		p {
 			font-size: 1.75rem;
@@ -24,6 +23,10 @@
 				width: 1.25em;
 				margin-top: $paragraph-margin-bottom;
 			}
+		}
+
+		@include breakpoint(medium) {
+			margin-bottom: 0;
 		}
 	}
 
